<resources>
    <string name="Velvet_App">Velvet-1.0</string>

    //VENTANA LOGIN
    <string name="tUsuarioIngreso">Ingresa su correo</string>
    <string name="tClaveIngreso">Ingresa su clave</string>
    <string name="txtUsuarioIngreso"> </string>
    <string name="txtClaveIngreso"> </string>
    <string name="btnIngresar">Ingresar</string>
    <string name="btnRegistrar">Registrar</string>
    //FIN

    //VENTANA REGISTRO
    <string name="tNombre">Ingrese su nombre</string>
    <string name="tCorreo">Ingrese su correo</string>
    <string name="tCelular">Ingrese su celular</string>
    <string name="tClave">Ingrese su clave</string>
    <string name="tEdad">Ingrese su edad</string>
    <string name="tCedula">Ingrese su cedula</string>
    <string name="tCiudad">Ingrese su ciudad</string>
    <string name="tOrientacion">Ingrese su orientacion</string>
    <string name="tGeneroSexual">Ingrese su genero</string>
    <string name="tSexo">Ingrese su sexo</string>
    <string name="txtNombre" />
    <string name="txtCorreo" />
    <string name="txtCelular" />
    <string name="txtClave" />
    <string name="txtEdad" />
    <string name="txtCedula" />
    <string name="txtCiudad" />
    <string name="txtOrientacion" />
    <string name="txtGeneroSexual" />
    <string name="txtSexo" />
    <string name="btnRegistrarInformacion">Registrarse</string>
    <string name="btnCancelarRegistro">Cancelar</string>
    //FIN

    //VENTANA REGISTRO INTERESES
    <string name="tTituloIntereses">Cuentanos tus intereses</string>
    <string name="tTituloPregunta">Empecemos con estos</string>
    <string name="tPregunta1">Genero favorito</string>
    <string name="ttPregunta2">Pelicula favorito</string>
    <string name="tPregunta3">Libro favorito</string>
    <string name="btnSiguienteIntereses">Siguiente</string>
    <string name="btnCancelarIntereses">Cancelar</string>
    //FIN

    //VENTANA PERFIL
    <string name="tMatch">Los intereses de tu futuro amigo.</string>
    <string name="tGeneroFavorito">Su genero favorito:</string>
    <string name="tPeliculaFavorita">Su pelicula favorita:</string>
    <string name="tLibroFavorito">Su libro favorito</string>
    <string name="tMostrarGenero"> </string>
    <string name="tMostrarPelicula"> </string>
    <string name="tMostraLibro"> </string>
    <string name="btnMensajes" />
    <string name="btnPerfil" />
    <string name="btnSiMatch" />
    <string name="btnNoMatch" />
    <string name="btnSalir">Cerrar Sesion</string>
    <string name="tInstrucciones">Rojo si no te interesa -Verde si te interesa</string>
    //FIN

    //VENTANA MENSAJE
    <string name="tMensajes">Estos son tus amigos</string>
    //FIN
</resources>